--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AgregarUnidades"></activity>
         <activity android:name=".splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +19,6 @@
         </activity>
         <activity android:name=".tipo_cuenta" />
         <activity android:name=".Login_Form" />
-
         <activity android:name=".RegistroConductor" />
         <activity android:name=".MainActivity" />
     </application>
