--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AgregarUnidades"></activity>
+        <activity android:name=".InicioConductor"></activity>
+        <activity android:name=".InicioPropietario" />
+        <activity android:name=".InicioPasajero" />
+        <activity android:name=".RegistroPropietario" />
+        <activity android:name=".RegistroPasajero" />
+        <activity android:name=".AgregarUnidades" />
         <activity android:name=".splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
