--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    def uploadServiceVersion = "3.5.2"
 
+    implementation "net.gotev:uploadservice:$uploadServiceVersion"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
