--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
@@ -38,71 +41,48 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
-}
-
-apply plugin: 'com.android.application'
-
-android {
-    compileSdkVersion 28
-
-    defaultConfig {
-        applicationId "com.danielme.android.navigationdrawer"
-        minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+    dependencies {
+        implementation 'androidx.legacy:legacy-support-v4:+'
+        implementation 'com.google.android.material:material:+'
+        implementation 'androidx.appcompat:appcompat:+'
+        implementation 'androidx.constraintlayout:constraintlayout:+'
+        implementation 'androidx.navigation:navigation-fragment:+'
+        implementation 'androidx.navigation:navigation-ui:+'
+        implementation 'androidx.lifecycle:lifecycle-extensions:+'
     }
-    buildTypes {
-        release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+
+    dependencies {
+        implementation 'androidx.appcompat:appcompat:+'
+        implementation 'androidx.constraintlayout:constraintlayout:+'
     }
-}
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-}
+    dependencies {
+        implementation 'androidx.appcompat:appcompat:+'
+        implementation 'androidx.constraintlayout:constraintlayout:+'
+    }
 
-dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:+'
-    implementation 'com.google.android.material:material:+'
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
-    implementation 'androidx.navigation:navigation-fragment:+'
-    implementation 'androidx.navigation:navigation-ui:+'
-    implementation 'androidx.lifecycle:lifecycle-extensions:+'
-}
+    dependencies {
+        implementation 'androidx.appcompat:appcompat:+'
+        implementation 'androidx.constraintlayout:constraintlayout:+'
+    }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
-}
+    dependencies {
+        implementation 'androidx.appcompat:appcompat:+'
+        implementation 'androidx.constraintlayout:constraintlayout:+'
+    }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
-}
+    dependencies {
+        implementation 'androidx.appcompat:appcompat:+'
+        implementation 'androidx.constraintlayout:constraintlayout:+'
+    }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
-}
+    dependencies {
+        implementation 'androidx.appcompat:appcompat:+'
+        implementation 'androidx.constraintlayout:constraintlayout:+'
+    }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
-}
-
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
-}
-
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
+    dependencies {
+        implementation 'com.google.android.gms:play-services-maps:17.0.0'
+        implementation 'androidx.appcompat:appcompat:+'
+    }
 }
