--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <activity android:name=".InicioConductor" />
+        <activity android:name=".PerfilPasajero" />
         <activity android:name=".InicioPropietario" />
         <activity android:name=".InicioPasajero" />
         <activity android:name=".RegistroPropietario" />
